[ALPS07725308] arm64: dts: mt6789: add wakeup source
add wakeup source for usb.

MTK-Commit-Id: a99121a69a8a21ad3345a29f206533fb6e8bd010

Signed-off-by: mtk21421 <Stan.Lu@mediatek.com>
CR-Id: ALPS07725308
Feature: USB 2.0 Device
Change-Id: I8eaa3eeb41e2d9315a14ae790caad0c153598b31
(cherry-pick from 1386b382fea5aca9b19c842f2c0c9ad357fbeaa1)

--- a/arch/arm64/boot/dts/mediatek/mt6789.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6789.dts
@@ -6377,6 +6377,7 @@
 			dr_mode = "otg";
 			usb-role-switch;
 			cdp-block;
+			wakeup-source;
 			pericfg = <&pericfg>;
 			infracg = <&infracfg_ao>;
 			port {
