[ALPS07788326] arm64: configs: Add CONFIG_MTK_MDP_DEBUG
Add CONFIG_MTK_MDP_DEBUG to bypass debug flows on user load.

MTK-Commit-Id: 8dcb76a02e1cc9af75177983c154d9ff8ffff96e

Signed-off-by: IRIS-SC.YANG <iris-sc.yang@mediatek.com>
CR-Id: ALPS07788326
Feature: mdp driver
Change-Id: I7e40902be3322fd68998741a37a7c02cb6e66d78
(cherry-pick from f9cdd8455869d36c8443e8c053e31ca986c15231)

--- a/kernel/configs/userdebug.config
+++ b/kernel/configs/userdebug.config
@@ -23,6 +23,7 @@ CONFIG_MTK_MET_DEBUG=y
 CONFIG_MTK_IOMMU_DEBUG=y
 CONFIG_MTK_PRINTK_DEBUG=y
 CONFIG_MTK_MML_DEBUG=y
+CONFIG_MTK_MDP_DEBUG=y
 CONFIG_MTK_CCU_DEBUG=y
 CONFIG_MTK_SERROR_HOOK=y
 CONFIG_MTK_SCMI_TIMEOUT_HOOK=y
