[ALPS07704347] Touch: add gt9896s for TUI
add gt9896s for TUI

MTK-Commit-Id: 44f64f07dca7322ee86f6d6ed3b1186f6b728319

Signed-off-by: ot_vishavjot.kaur <ot_vishavjot.kaur@mediatek.com>
CR-Id: ALPS07704347
Feature: touch_driver
Change-Id: Iced9e94fdd89b52e295ba6d5645ed36550647abe

--- a/drivers/input/touchscreen/Makefile
+++ b/drivers/input/touchscreen/Makefile
@@ -116,6 +116,7 @@ obj-$(CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE) += xiaomi/
 obj-$(CONFIG_TOUCHSCREEN_NT36523_HOSTDL_SPI) += nt36523/
 obj-$(CONFIG_TOUCHSCREEN_NT36523_DOUBLE_CLICK) += double_click.o
 
+obj-$(CONFIG_TOUCHSCREEN_MTK_TUI_COMMON_API) +=tui-common.o
 TOUCH_LISTS := $(subst ",,$(CONFIG_TOUCHSCREEN_MTK_TOUCH))
 obj-y += $(foreach TOUCH,$(TOUCH_LISTS),$(TOUCH)/)
 
