--- a/drivers/gpu/drm/mediatek/mediatek_v2/Kconfig
+++ b/drivers/gpu/drm/mediatek/mediatek_v2/Kconfig
@@ -8,7 +8,8 @@ config DRM_MEDIATEK_V2
 
 config DRM_MTK_DISABLE_AEE_LAYER
 	bool "Disable AEE Layer for the customer who don't want to produce AEE"
-	help
+	default y
+    help
 	  Disable AEE Layer if you do not want to produce AEE.
 	  Default Mediatek SoCs will produce AEE when exception occurred.
 	  If this value is y, will not produce AEE.
