arm64: configs: yunluo: Disable MTPROF and bootprof
* Also cleanup duplicated configurations

Signed-off-by: Woomymy <woomy@woomy.be>

--- a/drivers/tee/teei/Kconfig
+++ b/drivers/tee/teei/Kconfig
@@ -57,7 +57,6 @@ config MICROTRUST_TZ_DRIVER_MTK_BOOTPROF
 	tristate "Enable MTK bootprof to track boot progress of TEEI"
 	depends on MICROTRUST_TZ_DRIVER
 	depends on MTPROF
-	default y
 	help
 	  Enables the support of Mediatek bootprof feature in Microtrust
 	  tz_driver. This feature is for tracking boot progress by
@@ -145,7 +144,7 @@ config MICROTRUST_UNITTEST_SUPPORT
 config MICROTRUST_TZ_LOG
 	bool "Enable Microtrust TrustZone logger"
 	depends on MICROTRUST_TEE_SUPPORT
-	default y
+	default n
 	help
 	  Enable Microtrust TrustZone logger to dump TEE logs in kernel log buffer.
 	  This driver will read out log buffer and direct to console each
