sound: soc: Add missing " in Kconfig include
Signed-off-by: Woomymy <woomy@woomy.be>

--- a/sound/soc/Kconfig
+++ b/sound/soc/Kconfig
@@ -79,7 +79,7 @@ source "sound/soc/xtensa/Kconfig"
 source "sound/soc/zte/Kconfig"
 
 # Audio Switch
-source "sound/soc/et7480/Kconfig
+source "sound/soc/et7480/Kconfig"
 
 # Supported codecs
 source "sound/soc/codecs/Kconfig"
